--- a/portal/static/less/topnav.less
+++ b/portal/static/less/topnav.less
@@ -76,7 +76,6 @@
     padding: 2px 2px 2px 20px;
     position: relative;
     float: right;
-    background-color: transparent;
     background-repeat: no-repeat;
     background-position: 4px 16px;
     background-image: url('../img/fa_bars_ffffff.png');
@@ -86,6 +85,7 @@
     &:hover, &:active {
       cursor: pointer;
       background-image: url('../img/fa_bars_333333.png');
+      background-color: #fff;
     }
   }
 }
@@ -275,6 +275,7 @@
 /** Navbar for XS size **/
 #tnthNavbarXs {
   padding-top: 20px;
+  display: none;
 }
 .tnth-navbar-xs {
   margin: 7.5px -15px;
