--- a/portal/static/css/topnav.css
+++ b/portal/static/css/topnav.css
@@ -88,6 +88,14 @@
   border: 1px solid transparent;
   border-radius: 4px;
 }
+#tnthNavXs .tnth-navbar-toggle img {
+  margin-left: 8px;
+}
+#tnthNavXs .tnth-navbar-toggle.tnth-navbar-no-profile img {
+  visibility: hidden;
+  width: 1px;
+  margin-left: 0;
+}
 #tnthNavXs .tnth-navbar-toggle:hover,
 #tnthNavXs .tnth-navbar-toggle:active {
   cursor: pointer;
