--- a/portal/static/less/topnav.less
+++ b/portal/static/less/topnav.less
@@ -82,6 +82,16 @@
     background-size: auto 13px;
     border: 1px solid transparent;
     border-radius: 4px;
+    img {
+      margin-left: 8px;
+    }
+    &.tnth-navbar-no-profile {
+      img {
+        visibility: hidden;
+        width: 1px;
+        margin-left: 0;
+      }
+    }
     &:hover, &:active {
       cursor: pointer;
       background-image: url('../img/fa_bars_333333.png');
